Kapitel1: Unterkapitel Flash hinzugefüt und geschrieben; bib file update

--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -44,3 +44,38 @@
   timestamp = {2008.06.13}
 }
 
+@OTHER{japp,
+  author = {Oracle},
+  title = {Java Applets},
+  howpublished = {\url{http://docs.oracle.com/javase/tutorial/deployment/applet/}}
+  timestamp = {2014.08.25}
+}
+
+
+@OTHER{webgl-14,
+  author = {Khronos Group},
+  title = {WebGL 2 Specification},
+  year = {2014},
+  month = {Aug},
+  howpublished = {\url{https://www.khronos.org/registry/webgl/specs/latest/2.0/}}
+  timestamp = {2014.08.25}
+}
+
+
+@OTHER{flash-14,
+  author = {Adobe Systems},
+  title = {Funktionen | Adobe Flash Player},
+  year = {2014},
+  howpublished = {\url{http://www.adobe.com/at/products/flashplayer/features.html}}
+  timestamp = {2014.08.25}
+}
+
+@OTHER{html-14,
+  author = {W3C},
+  title = {W3C Candidate Recommendation},
+  year = {2014},
+  month = {Jul},
+  howpublished = {\url{http://www.w3.org/TR/2014/CR-html5-20140731/}}
+  timestamp = {2014.08.25}
+}
+
