--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -79,3 +79,12 @@
   timestamp = {2014.08.25}
 }
 
+@OTHER{webgl-14,
+  author = {Khronos Group},
+  title = {WebGL - OpenGL ES 2.0 for the Web},
+  year = {2014},
+  howpublished = {\url{http://www.khronos.org/webgl/}}
+  timestamp = {2014.08.28}
+}
+
+
