--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -27,6 +27,15 @@
 }
 
 %TODO: Prüfen ob angabe so passt
+@BOOK{pacs,
+  AUTHOR = "Dr. H. K. Huang",
+  TITLE = "PACS and Imaging Informatics",
+  PUBLISHER = "Kluwer Academic Press",
+  YEAR = "2010",
+  month = {Mar},
+  ADDRESS = "Wiley-Blackwell",
+}
+
 @OTHER{capp,
   author = {Cappuccino Project},
   title = {Cappuccino Web Framework},
