--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -57,8 +57,9 @@ Sie wird als freie Open-Source-Software unter der GPL für das Betriebssystem Ma
 OsiriX ist nur für die Forschung und dem privaten gebrauch zugelassen, 
 für einen einen diagnostischen Einsatz in der Medizin steht die kostenpflichtige Version OsiriX MD zur verfügung.
 \\
-Das Programm führt eine Datenbank von DICOM Datensätzen welche von DICOM-Datein importiert bzw auch wieder als solche exportiert werden können.
-Weiters können über das Protokoll die Daten auch von einem PACS-Server geladen werden.
+Das Programm führt eine Datenbank von DICOM Datensätzen, 
+welche von DICOM-Datein importiert bzw auch wieder als solche exportiert werden können.
+Weiters können über das DICOM-Protokoll die Daten auch von einem PACS-Server geladen werden.
 
 
 \subsection{Funktionsumfang von Betrachtungstools}
