--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -182,9 +182,9 @@ Die Übergabe einer ROI erfolgt als Polygon in Form einer Listen von Punkten im 
    [
       "polygon":
       [
-         "point":{"x":0, "y":1, z:0},
-         "point":{"x":1, "y":1, z:0},
-         "point":{"x":0, "y":0, z:0}
+         "point":{"x":0, "y":1, "z":0},
+         "point":{"x":1, "y":1, "z":0},
+         "point":{"x":0, "y":0, "z":0}
       ],
 
    ]
@@ -262,6 +262,7 @@ Beispiel:
 %----------------------------------------------
 \subsubsection{2DView}
 \label{sec:2DView}
+
 
 %----------------------------------------------
 % ** Kommunikations Module
