Kapitel1: Struktur geändert und Einleitung geschrieben; bibtext fehler gefixt

--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -26,14 +26,13 @@
   timestamp = {2008.06.13}
 }
 
-%TODO: Prüfen ob angabe so passt
 @BOOK{pacs,
   AUTHOR = "Dr. H. K. Huang",
   TITLE = "PACS and Imaging Informatics",
   PUBLISHER = "Kluwer Academic Press",
   YEAR = "2010",
   month = {Mar},
-  ADDRESS = "Wiley-Blackwell",
+  ADDRESS = "Wiley-Blackwell"
 }
 
 @OTHER{capp,
@@ -56,17 +55,17 @@
 @OTHER{japp,
   author = {Oracle},
   title = {Java Applets},
-  howpublished = {\url{http://docs.oracle.com/javase/tutorial/deployment/applet/}}
+  howpublished = {\url{http://docs.oracle.com/javase/tutorial/deployment/applet/}},
   timestamp = {2014.08.25}
 }
 
 
-@OTHER{webgl-14,
+@OTHER{webgl-spec-14,
   author = {Khronos Group},
   title = {WebGL 2 Specification},
   year = {2014},
   month = {Aug},
-  howpublished = {\url{https://www.khronos.org/registry/webgl/specs/latest/2.0/}}
+  howpublished = {\url{https://www.khronos.org/registry/webgl/specs/latest/2.0/}},
   timestamp = {2014.08.25}
 }
 
@@ -75,7 +74,7 @@
   author = {Adobe Systems},
   title = {Funktionen | Adobe Flash Player},
   year = {2014},
-  howpublished = {\url{http://www.adobe.com/at/products/flashplayer/features.html}}
+  howpublished = {\url{http://www.adobe.com/at/products/flashplayer/features.html}},
   timestamp = {2014.08.25}
 }
 
@@ -84,7 +83,7 @@
   title = {W3C Candidate Recommendation},
   year = {2014},
   month = {Jul},
-  howpublished = {\url{http://www.w3.org/TR/2014/CR-html5-20140731/}}
+  howpublished = {\url{http://www.w3.org/TR/2014/CR-html5-20140731/}},
   timestamp = {2014.08.25}
 }
 
@@ -92,7 +91,7 @@
   author = {Khronos Group},
   title = {WebGL - OpenGL ES 2.0 for the Web},
   year = {2014},
-  howpublished = {\url{http://www.khronos.org/webgl/}}
+  howpublished = {\url{http://www.khronos.org/webgl/}},
   timestamp = {2014.08.28}
 }
 
