Kapitel2: Unterkapitel Osirix erweitert

--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -35,6 +35,16 @@
   ADDRESS = "Wiley-Blackwell"
 }
 
+
+@OTHER{osirix,
+  author = {Antoine Rosset},
+  title = {Osirix - DICOM Viewer},
+  month = {Sept},
+  year = {2014},
+  howpublished = {\url{http://www.osirix-viewer.com/}}
+}
+
+
 @OTHER{capp,
   author = {Cappuccino Project},
   title = {Cappuccino Web Framework},
