--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -6,7 +6,6 @@
 Software für die Bildsuche in radiologischen Daten gibt es bis jetzt noch nicht, 
 allerdings decken sich die Anforderungen großteils mit Betrachtungstools für 2D und 3D Daten aus der Radiologie und Nuklearmedizin.
 Solche Softwareprodukte finden sich in den Betrachtungs-Workstations von PACS-System in Krankenhäusern oder als Betrachtungstools für Datensätze des offenen Standards DICOM.
-\\
 Die beiden Konzepte PACS und DICOM werden im folgenden Kapitel kurz erklärt, sowie die Umsetzung der benötigten Funktionalität in zwei konkreten Softwareproduken diskutiert.
 
 %----------------------------------------------
@@ -16,18 +15,16 @@ Die beiden Konzepte PACS und DICOM werden im folgenden Kapitel kurz erklärt, so
 \label{sec:PACS-Systeme}
 Ein PACS-System (Picture Archiving and Communication System) dient zum Speichern und Austausch von medizinischen Bilddaten.
 Obwohl es prinzipel für alle bildgebenden Verfahren verwendet werden kann wird es vorwiegend für Daten aus der Radiologie und Nuklearmedizien genutzt.
-\\
+%
 Das Systems setzt sich aus dem PACS Server und den Workstations zusammen.
 Der Server sammelt Daten von den bildgebenden Geräten,
  verknüpft Sie mit Daten aus einem Krankenhaus Informations System (KIS) oder Radiologie Informations System (RIS) und sorgt für ihre Archivierung in einem Kurz oder Langzeitarchiv. 
 Die Kommunikation mit den bildgebenden Geräten erfolgt meist durch ein Protokoll welches den DICOM Standard implementetiert.
-\\
+%
 Die Befundung erfolgt auf den PACS Workstations welche die Daten vom Server laden und anzeigen.
 Die Workstation stellte die Funktionalität zur Betrachtung und zum Nachbearbeiten der Bilder zur verfügung.
 Änderungen der Daten werden von der Workstation zurück auf den Server geladen.
-Je nach Funktionsumfang stehen auch Tools zur Befundung zur verfügung welche die Daten and das RIS oder KIS weiter geben.
-%TODO: cite pacs - seite 219-224
-%TODO: Wie gehören Seiten zitiert
+Je nach Funktionsumfang stehen auch Tools zur Befundung zur verfügung welche die Daten and das RIS oder KIS weiter geben \cite{pacs}.
 
 %----------------------------------------------
 % * DICOM
@@ -38,7 +35,7 @@ DICOM steht für Digital Imaging and Communication in Medicine und ist ein offen
 Die wesentlichen Teile der Spezifikation sind die Datenstruktur für die Bilddaten und zugehörige Metainformationen, 
 Services welche auf diesen Daten operieren, Anforderung an DICOM conforme Hard- und Software-Produkte und das Ablegen der Informationen auf einem Datenträger.
 Das Datenmodel setzt sich in Anlehnung an die reale Welt grundliegend aus den Entitäten Patient, Studie, Serie und Image zusammen zwischen denen jeweils eine 1:n oder 0:n Beziehung besteht.
-Es bietet weiters ausreichen Möglichkeiten zur Erweiterung durch einen Definitionsmechnaissum für alle DICOM Objekte die sogenannte Image Object Defintion.
+Es bietet weiters ausreichen Möglichkeiten zur Erweiterung durch einen Definitionsmechnaissum für alle DICOM Objekte die sogenannte Image Object Defintion \cite{pacs}.
 
 %----------------------------------------------
 % * 
@@ -56,21 +53,41 @@ OsiriX ist eine Software zur Betrachtung und Nachbearbeitung von DICOM Bildaten.
 Sie wird als freie Open-Source-Software unter der GPL für das Betriebssystem Mac OS X entwickelt.
 OsiriX ist nur für die Forschung und dem privaten gebrauch zugelassen, 
 für einen einen diagnostischen Einsatz in der Medizin steht die kostenpflichtige Version OsiriX MD zur verfügung.
-\\
+%
 Das Programm führt eine Datenbank von DICOM Datensätzen, 
 welche von DICOM-Datein importiert bzw auch wieder als solche exportiert werden können.
-Weiters können über das DICOM-Protokoll die Daten auch von einem PACS-Server geladen werden.
+Weiters können über das DICOM-Protokoll die Daten auch von einem PACS-Server geladen werden \cite{osirix}.
+
+Von der Navigationsstrutur unterteil sich OsiriX in eine Datenbankebene und eine Betrachtungsebene welche jeweils durch verschiedene Fenster umgesetzt wurden.
+Der vollständigkeit halber sei erwähnt das es auch eine Ebene für 3D Rendering der Volumes gibt welche aber für diese Arbeit keinen weiteren Nutzen darstellt.
+\includegraphics[width=\linewidth]{img/c1_osirix_db_view.jpg}
+In der Datenbankebene können die Datensätzte importiert, exportiert und durchsucht werden, wobei jede Studie für einen Patienten einen Eintrag in der Liste darstellt.
+Weiters stehen Unterlisten zum Anzeigen der Serien einer Studie zur Verfügung.
+Unter der Listenansicht werden die ausgewählten Einträge als Thumbnails und in einem minimalen 2D Betrachter,
+welche die wichtigsten Funktionen der Betrachtungsebene implementiert zur Vorschau dargestellt.
+In der Betrachtungsebene finden sich die eigentlichen Funktionen und Tools welche für die Interaktion mit den Bildern notwendig sind.
+Hier bietet OsiriX eine große Funktionspalette wobei hier nur auf die Kernfunktionalität eingegangen wird.
+
+\paragraph{Funktionsumfang}
+Die Steuerung für die Interaktionstools erfolgt auch wie bei den PACS Workstations mit der Maus, 
+welcher die spezifiischen Funktionen zugewiesen werden können. Die jeweils zugewiensene Funktion wird durch das Drücekn der Maustaste aktiv.
+\begin{itemize}
+	\item Bei der \textbf{Fensterung} wird mit der X-Achse wird die Fensterbreite (Kontrast) und mit der Y-Achse das Fensterzentrum (Helligkeit) angepasst.
+	\item \textbf{Positionierung} des Bildes innerhalb der Anzeigefläche. Geht das Bild über die Anzeigefläche wird dies durch einen farbige Linie an der jeweiligen Kante signalisiert.
+	\item \textbf{Zoom} durch das verschieben der Maus entlang einer Achse.
+	\item \textbf{Rotation} um das Bildzentrum durch das verschieben der Maus entlang der X-Achse.
+	\item \textbf{Navigation} durch das Volume. Die Achse in der die Maus nach einem Klick zuerst verschoben wird, wird für die Navigation gewählt, die andere bleibt inaktiv.
+	\item Einzeichnen von \textbf{ROIs}. Hierbei werden Punkte, Linien, Polygone, Winkel und noch weitere Geometrien unterstüzt. 
+		Sind in dem Datensatz die notwendigen Informationen vorhanden erfolgt einen automatische Vermessung der ROIs.
+\end{itemize}
+Weiters können mehrere Betrachtungs-Fenster nebeneinander angeordnet werden, wobei sich diese zur Darstellung unterschidlicher Serien bzw Orientierungen eines Datensatzes nutzen lassen. 
+Die Orientierung gibt an entlang welcher Achse die Bilder eines Volumes geschnitten werden.
+Wird in verschiedenen Fenstern eine unterschiedliche Orientierung gewählt,
+so wird beim navigieren durch das Volume in einem Fenster die Position der Schnittebene in den anderen als Linie angezeigt.
+%TODO: Menubar
+%TODO: Bilder 2DView
 
 
-\subsection{Funktionsumfang von Betrachtungstools}
-\label{sec:Funktionsumfang von Betrachtungstools}
-
-\subsubsection{Zoom und Scroll}
-\subsubsection{Fensterung und Level}
-\subsubsection{Histogram Modifikation}
-\subsubsection{Negativ bilden}
-\subsubsection{Distanz und Flächenmaß}
-\subsubsection{Collagen}
 %TODO: Kontakt markus .... was gibst schon
 %TODO: Kontakt markus .... pacs workstations
 
